--- a/Assets/style.css
+++ b/Assets/style.css
@@ -5,6 +5,8 @@ body {
     flex-direction: column;
     background-color:aliceblue;
     margin: 10px;
+    text-align: justify;
+    justify-content: space-between 10px;
 }
 h1 {
     display: flex;
@@ -26,4 +28,28 @@ h1 {
     justify-content: center;
     color: black;
     font-size: 300%;
+}
+
+table {
+    border:1px solid black;
+    font-size: 20px;
+  };
+
+tr {
+    border:1px solid black;
+    margin: 1px;
+  };
+
+td {
+    border:1px solid black;
+    margin: 1px;
+  };
+
+input {
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+li {
+    list-style: none;
 }
